--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Arial', sans-serif;
 }
 
-.title {
+* {
   font-family: 'Graffiti', sans-serif;
 }
 
@@ -23,7 +23,7 @@ body {
 
 @font-face {
   font-family: 'Graffiti';
-  src: url('./fonts/SecretoDemoRegular.ttf') format('truetype');
+  src: url('./assets/fonts/SecretoDemoRegular.ttf') format('truetype');
 }
 
 @keyframes shimmer {
